# server/routes/calculets/index.js
@@ -65,6 +65,25 @@ router.get(
 
 /**
  * @swagger
+ *  /api/calculets/find:
+ *    get:
+ *      parameters:
+ *        - $ref: "#/components/parameters/mainId"
+ *        - $ref: "#/components/parameters/subId"
+ *        - $ref: "#/components/parameters/title"
+ *      tags: [calculets]
+ *      summary: 계산기 검색 (대분류 / 소분류 / 제목)
+ *      description: 대분류 | 소분류 | 계산기 제목으로 검색 필터 설정 가능 (모든 쿼리 파라미터는 필수X)
+ *      responses:
+ *        200:
+ *          $ref: "#/components/responses/getCalculetList"
+ *        400:
+ *          $ref: "#/components/responses/error"
+ */
+router.get("/find", errorHandler.dbWrapper(getCalculetList.search));
+
+/**
+ * @swagger
  *  /api/calculets/{calculetId}:
  *    get:
  *      tags: [calculets]
